[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saga-agent"
version = "0.1.0"
description = "Transactional safety layer for AI agent tool execution — auto-rollback via Saga pattern"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["ai", "agent", "saga", "rollback", "llm", "transaction"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# 외부 의존성 없음 — 표준 라이브러리만 사용
dependencies = []

[project.optional-dependencies]
# 예시 실행 시 필요한 선택적 의존성
examples = ["openai>=1.0", "langchain>=0.2"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/rlgh135/saga-agent"
Repository = "https://github.com/rlgh135/saga-agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["saga_agent*"]
